CSS file worked on

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
     <main>
       <div class="intro">
-        <div class="awesome">
-          This website is awesome
+        <div class="intro-container">
+          <div class="awesome">This website is awesome</div>
+          <div  class="text">This website has some subtext that goes here under the main title. It's smalle font and the color is lower contrast</div>
+          <button>Sign up</button>
         </div>
-        <div  class="text">This website has some subtext that goes here under the main title. It's smalle font and the color is lower contrast</div>
-        <button>Sign up</button>
         <div class="image">Image placeholder</div>
       </div>
 
